--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,252 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* PDF viewer side bar */
+
+:root {
+    --rpv-thumbnail__container-background-color: #fff;
+    --rpv-thumbnail__container-box-shadow: rgba(0, 0, 0, 0.2) 2px 2px 8px 0px;
+    --rpv-thumbnail__item--selected-background-color: rgba(0, 0, 0, 0.3)
+}
+
+.rpv-core__viewer--dark {
+    --rpv-thumbnail__item--selected-background-color: #2566e8
+}
+
+.rpv-thumbnail__cover {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    min-height: inherit
+}
+
+.rpv-thumbnail__cover-inner {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    min-height: inherit
+}
+
+.rpv-thumbnail__cover-image {
+    max-height: 100%;
+    max-width: 100%
+}
+
+.rpv-thumbnail__cover-loader {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%
+}
+
+.rpv-thumbnail__container {
+    align-items: center;
+    background: var(--rpv-thumbnail__container-background-color);
+    box-shadow: var(--rpv-thumbnail__container-box-shadow);
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    position: relative
+}
+
+.rpv-thumbnail__item {
+    cursor: pointer
+}
+
+.rpv-thumbnail__item--single, .rpv-thumbnail__item--dual-cover {
+    padding: .5rem
+}
+
+.rpv-thumbnail__item--dual-even, .rpv-thumbnail__item--dual-cover-odd {
+    padding: .5rem 0 .5rem .5rem
+}
+
+.rpv-thumbnail__item--dual-odd, .rpv-thumbnail__item--dual-cover-even {
+    padding: .5rem .5rem .5rem 0
+}
+
+.rpv-thumbnail__item--single:hover, .rpv-thumbnail__item--dual-cover:hover, .rpv-thumbnail__items--dual:hover .rpv-thumbnail__item, .rpv-thumbnail__items--dual-cover:hover .rpv-thumbnail__item {
+    background-color: var(--rpv-thumbnail__item--selected-background-color)
+}
+
+.rpv-thumbnail__item:focus {
+    outline: 0
+}
+
+.rpv-thumbnail__label {
+    font-size: .75em;
+    text-align: center;
+    padding: .25rem
+}
+
+.rpv-thumbnail__list {
+    overflow: auto;
+    padding: .5rem
+}
+
+.rpv-thumbnail__list--right {
+    direction: rtl
+}
+
+.rpv-thumbnail__list--horizontal {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    width: 100%
+}
+
+.rpv-thumbnail__list--vertical {
+    height: 100%
+}
+
+.rpv-thumbnail__items {
+    align-items: center;
+    display: flex;
+    justify-content: center
+}
+
+.rpv-thumbnail__items--selected .rpv-thumbnail__item {
+    background-color: var(--rpv-thumbnail__item--selected-background-color)
+}
+
+.rpv-thumbnail__list-container {
+    height: 100%;
+    width: 100%
+}
+
+.rpv-thumbnail__loader {
+    align-items: center;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    width: 100%
+}
+
+
+:root {
+    --rpv-default-layout__body-background-color: #fff;
+    --rpv-default-layout__container-border-color: rgba(0, 0, 0, 0.3);
+    --rpv-default-layout__toolbar-background-color: #eee;
+    --rpv-default-layout__toolbar-border-bottom-color: rgba(0, 0, 0, 0.1);
+    --rpv-default-layout__sidebar-border-color: rgba(0, 0, 0, 0.2);
+    --rpv-default-layout__sidebar--opened-background-color: #fff;
+    --rpv-default-layout__sidebar-headers-background-color: #eee;
+    --rpv-default-layout__sidebar-content--opened-background-color: #fff;
+    --rpv-default-layout__sidebar-content--opened-border-color: rgba(0, 0, 0, 0.2);
+    --rpv-default-layout__sidebar-content--opened-color: #000
+}
+
+.rpv-core__viewer--dark {
+    --rpv-default-layout__body-background-color: #1a1a1a;
+    --rpv-default-layout__container-border-color: #454647;
+    --rpv-default-layout__toolbar-background-color: #292929;
+    --rpv-default-layout__toolbar-border-bottom-color: #000;
+    --rpv-default-layout__sidebar-border-color: #000;
+    --rpv-default-layout__sidebar--opened-background-color: #fff;
+    --rpv-default-layout__sidebar-headers-background-color: #292929;
+    --rpv-default-layout__sidebar-content--opened-background-color: #1a1a1a;
+    --rpv-default-layout__sidebar-content--opened-border-color: #292929;
+    --rpv-default-layout__sidebar-content--opened-color: #fff
+}
+
+
+.rpv-default-layout__sidebar {
+    display: flex;
+    /*padding-top: 2.5rem*/
+}
+
+.rpv-default-layout__sidebar--opened {
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 12rem;
+    background-color: var(--rpv-default-layout__sidebar--opened-background-color);
+    z-index: 1
+}
+
+.rpv-default-layout__sidebar--right {
+    border-left: 1px solid var(--rpv-default-layout__sidebar-border-color)
+}
+
+.rpv-default-layout__main {
+    display: flex;
+    height: 100%;
+    position: relative
+}
+
+.rpv-default-layout__main--right {
+    direction: rtl
+}
+
+.rpv-default-layout__body {
+    background-color: var(--rpv-default-layout__body-background-color);
+    flex: 1;
+    overflow: auto;
+    padding-top: 2.5rem
+}
+
+@media (min-width: 768px) {
+    .rpv-default-layout__sidebar--opened {
+        width: 16rem
+    }
+}
+
+@media (min-width: 1024px) {
+    .rpv-default-layout__sidebar--opened {
+        background: inherit;
+        position: inherit;
+        width: 20rem;
+        z-index: inherit
+    }
+}
+
+.rpv-default-layout__sidebar-tabs {
+    display: flex;
+    height: 100%;
+    width: 100%
+}
+
+.rpv-default-layout__sidebar-headers {
+    background-color: var(--rpv-default-layout__sidebar-headers-background-color);
+    padding: .25rem
+}
+
+.rpv-default-layout__sidebar-header {
+    padding: .125rem
+}
+
+.rpv-default-layout__sidebar-content {
+    display: none;
+    flex-grow: 1;
+    flex-shrink: 1
+}
+
+.rpv-default-layout__sidebar-content--opened {
+    background-color: var(--rpv-default-layout__sidebar-content--opened-background-color);
+    color: var(--rpv-default-layout__sidebar-content--opened-color);
+    display: flex;
+    overflow: hidden
+}
+
+
+.rpv-default-layout__sidebar-content--right {
+    border-right: 1px solid var(--rpv-default-layout__sidebar-content--opened-border-color);
+    border-left: 1px solid var(--rpv-default-layout__sidebar-content--opened-border-color);
 }
